...
          ? const Center(child: CircularProgressIndicator())
          : Column(
              mainAxisAlignment: MainAxisAlignment.center,
              children: <Widget>[
                ElevatedButton(
                  onPressed: showRecognizedText,
                  child: const Text('OCR 데이터 확인하기'),
                ),
                TextField(
                  controller: systemTextController,
                  decoration: const InputDecoration(
                    border: OutlineInputBorder(),
                    labelText: 'GPT 역할 입력...',
...
                    border: OutlineInputBorder(),
                    labelText: 'GPT에게 어떻게 물어볼지 입력...',
                  ),
                ),
                ElevatedButton(
                    onPressed: analyzeNutrientLabel,
                    child: const Text('OCR데이터와 함께 GPT에게 물어보기')),
                answer != ''
                    ? Container(
                        padding: const EdgeInsets.all(16.0),
                        margin: const EdgeInsets.only(top: 20),
                        decoration: BoxDecoration(
                          border: Border.all(color: Colors.grey),
...
